Change app logo

--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Zeta (D)</string>
+    <string name="app_name">Myntra (D)</string>
 
     <string name="enable_stetho">Enable Stetho</string>
     <string name="enable_tiny_dancer">Enable Tiny Dancer</string>
